--- a/app/views/providers/_template.html.haml
+++ b/app/views/providers/_template.html.haml
@@ -19,8 +19,7 @@
 
 - unless hide_header
   %div.clearfix#page-header
-    %h1
-      = translate_helper("show_provider_heading", provider: @provider.name)
+    = render 'title'
 
 .row
   .col-sm-12
