--- a/app/views/providers/show.html.haml
+++ b/app/views/providers/show.html.haml
@@ -2,8 +2,13 @@
   - if can? :manage, @provider
     .pull-right
       = link_to translate_helper("create_first_admin_user"), new_user_provider_users_path(@provider), class: "btn action-button" unless @provider.has_admin?
+      - if can? :index, Provider
+        = link_to translate_helper("providers_link_text"), providers_path, class: "btn action-button"
+      - if @provider.active?
+        = link_to translate_helper("inactivate"), inactivate_provider_path(@provider), method: :post, :class=>'btn action-button', :data => { :confirm => translate_helper(:inactivate_provider_confirmation)}
+      - else
+        = link_to translate_helper("reactivate"), reactivate_provider_path(@provider), method: :post, :class=>'btn action-button', :data => { :confirm => translate_helper(:reactivate_provider_confirmation)}
       = link_to translate_helper("edit_provider_button"), edit_provider_path(@provider), class: "btn action-button"
-  %h1
-    = translate_helper("show_provider_heading", provider: @provider.name)
+  = render 'title'
 
 = render 'template', partial_name: 'profile', hide_header: true
