--- a/app/views/vehicle_maintenance_schedule_types/index.html.haml
+++ b/app/views/vehicle_maintenance_schedule_types/index.html.haml
@@ -12,6 +12,9 @@
         %tr
           %th= translate_helper("vehicle_maintenance_schedule_type_name")
       %tbody
-        = render partial: 'vehicle_maintenance_schedule_type', collection: @vehicle_maintenance_schedule_types
+        - if @vehicle_maintenance_schedule_types.empty?
+          %td= translate_helper(:no_vehicle_maintenance_schedule_type)
+        - else
+          = render partial: 'vehicle_maintenance_schedule_type', collection: @vehicle_maintenance_schedule_types
 
 = render 'shared/modal_dialog', modal_id: "modal-dialog" 
