--- a/app/views/driver_requirement_templates/index.html.haml
+++ b/app/views/driver_requirement_templates/index.html.haml
@@ -1,10 +1,9 @@
 = render 'shared/highlight_active_tab_js', is_primary_nav: false, tab_class: (params[:provider_id].blank? ? 'admin' : 'provider')
 #page-header.row
-  .col-sm-12.col-md-6
-    %h1= params[:provider_id].blank? ? translate_helper("system_driver_requirement_templates_index_heading") : translate_helper("provider_driver_requirement_templates_index_heading")
-  .col-sm-12.col-md-6
+  .col-sm-12{style: 'padding: 0px;'}
     .pull-right
       = link_to translate_helper("new_driver_requirement_template_link_text"), new_driver_requirement_template_path(provider_id: params[:provider_id]), class: "btn action-button"
+    %h1= params[:provider_id].blank? ? translate_helper("system_driver_requirement_templates_index_heading") : translate_helper("provider_driver_requirement_templates_index_heading")
 .row
   .col-sm-12
     %table.table.table-striped.table-bordered#driver_requirement_templates_table
