--- a/app/views/providers/_addresses.html.haml
+++ b/app/views/providers/_addresses.html.haml
@@ -6,6 +6,10 @@
           .btns.pull-right
             =link_to translate_helper("create_provider_address_text"), '#', id: 'addProviderCommonAddress', class:'btn action-button'
           = translate_helper(:show_provider_address_heading)
+          - if ProviderCommonAddress.where(provider: @provider).empty?
+            %span.badge
+              0
+            %i.fa.fa-exclamation-triangle{style: 'color: red'}
   .panel-body
     .row
       .col-sm-12
