Use simple_format for customer comments, add translations

--- a/app/views/customers/_others_panel.html.haml
+++ b/app/views/customers/_others_panel.html.haml
@@ -15,7 +15,8 @@
         = f.label :comments, translate_helper(:customer_comments) 
       .col-sm-9
         = f.text_area :comments, class: 'form-control'
-    .pull-right
-      = link_to translate_helper(:view_customer_comments_report), 
-          customer_comments_report_customer_path(@customer),
-          class: "btn action-button"
+    -unless edit_mode == :edit
+      .pull-right
+        = link_to translate_helper(:view_customer_comments_report), 
+            customer_comments_report_customer_path(@customer),
+            class: "btn action-button"
