--- a/app/views/providers/_title.html.haml
+++ b/app/views/providers/_title.html.haml
@@ -1,4 +1,5 @@
 %h1
   = translate_helper("show_provider_heading", provider: @provider.name)
-  %span{style:'color: red;'}
-    = " (#{translate_helper(:inactive)})" if !@provider.active?
+  - if !@provider.active?
+    %span{style:'color: red;'}
+      = " (#{translate_helper(:inactive)})" 
