--- a/app/views/providers/show.html.haml
+++ b/app/views/providers/show.html.haml
@@ -1,7 +1,7 @@
 #page-header.row
   - if can? :manage, @provider
     .pull-right
-      = link_to translate_helper("create_first_admin_user"), new_user_provider_users_path(@provider), class: "btn action-button" unless @provider.has_admin?
+      = link_to translate_helper("create_first_admin_user"), new_user_provider_users_path(@provider), class: "btn action-button" if @provider.active? && !@provider.has_admin?
       - if can? :index, Provider
         = link_to translate_helper("providers_link_text"), providers_path, class: "btn action-button"
       - if @provider.active?
@@ -11,4 +11,8 @@
       = link_to translate_helper("edit_provider_button"), edit_provider_path(@provider), class: "btn action-button"
   = render 'title'
 
-= render 'template', partial_name: 'profile', hide_header: true
+- if @provider.active?
+  = render 'template', partial_name: 'profile', hide_header: true
+- else
+  = render 'profile'
+  = render 'shared/highlight_active_tab_js', is_primary_nav: false, tab_class: 'provider'
