--- a/app/views/customers/_others_panel.html.haml
+++ b/app/views/customers/_others_panel.html.haml
@@ -15,7 +15,7 @@
         = f.label :comments, translate_helper(:customer_comments) 
       .col-sm-9
         = f.text_area :comments, class: 'form-control'
-    -unless edit_mode == :edit
+    - if edit_mode == :show
       .pull-right
         = link_to translate_helper(:view_customer_comments_report), 
             customer_comments_report_customer_path(@customer),
