--- a/app/views/addresses/_results.html.haml
+++ b/app/views/addresses/_results.html.haml
@@ -1,16 +1,6 @@
 - if @addresses.present?
   - for address in @addresses
-    %tr
-      %td.name
-        = link_to_if can?(:edit, ProviderCommonAddress), address.name || '' , edit_provider_common_address_path(address)
-      %td= address.address
-      %td= address.city
-      %td= address.state
-      %td= format_phone_number address.phone_number
-      %td= address.in_district? ? "In District" : "Out of District"
-      %td= address.notes
-      - if can? :edit, Address
-        %td= link_to translate_helper("edit"), edit_provider_common_address_path(address), :class=>'edit edit-address'
+    = render 'addresses/provider_common_address', address: address
 - else
   %tr
     %td
