--- a/app/views/providers/_addresses_table.html.haml
+++ b/app/views/providers/_addresses_table.html.haml
@@ -1,17 +1,20 @@
-%table#address_results
-  %tr
-    %th= translate_helper("address_results_name_column")
-    %th= translate_helper("address")
-    %th= translate_helper("city")
-    %th= translate_helper("state")
-    %th= translate_helper("phone_number")
-    %th= translate_helper("in_district")
-    %th= translate_helper("address_notes")
-    - if can? :edit, Vehicle
-      %th
-  - if @provider.addresses.size == 0
+%table.table.table-bordered#address_results
+  %thead
     %tr
-      %td= translate_helper("no_addresses_yet")
-  - else
-    %tr
-      %td= translate_helper("search_for_address")
+      %th= translate_helper("address_results_name_column")
+      %th= translate_helper("address")
+      %th= translate_helper("city")
+      %th= translate_helper("state")
+      %th= translate_helper("phone_number")
+      %th= translate_helper("in_district")
+      %th= translate_helper("address_notes")
+      - if can? :edit, Vehicle
+        %th
+  %tbody
+    - @provider.addresses.each do |address|
+      = render 'addresses/provider_common_address', address: address
+
+:javascript
+  $(function() {
+    $('#address_results').dataTable();
+  });
