--- a/app/views/drivers/show.html.haml
+++ b/app/views/drivers/show.html.haml
@@ -1,7 +1,10 @@
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'drivers'
 #page-header.row
   .col-sm-12.col-md-6
-    %h1= translate_helper("show_driver_heading")
+    %h1
+      = translate_helper("show_driver_heading")
+      - if @driver.inactivated?
+        %span{style: 'font-size: small; color: red;'}= @driver.active_status_text
   .col-sm-12.col-md-6
     - if can? :manage, @driver
       .pull-right
