Support Vehicle legal and non-legal compliance events [RPII-87]

--- a/app/views/providers/_vehicles.html.haml
+++ b/app/views/providers/_vehicles.html.haml
@@ -1,3 +1,7 @@
+%h2.section-header= translate_helper("configure_provider_vehicle_requirement_templates")
+= link_to translate_helper("provider_vehicle_requirement_templates_link_text"), vehicle_requirement_templates_path(provider_id: current_provider_id), target: '_blank'
+%hr
+
 %h2.section-header= translate_helper("configure_provider_vehicle_maintenance_types")
 = link_to translate_helper("provider_vehicle_maintenance_types_link_text"), vehicle_maintenance_schedule_types_path, target: '_blank'
 %hr
