Tweaking adding provider common address [RPII-122]

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,3 +23,5 @@
 @import "v2_theme";
 @import "trip_place_picker";
 @import "invalid_events";
+@import "selectize";
+@import "selectize.bootstrap3";
