--- a/app/views/providers/_addresses.html.haml
+++ b/app/views/providers/_addresses.html.haml
@@ -15,5 +15,5 @@
       = render 'addresses_table'
     
 
-= render 'new_address_dialog'
+= render 'add_address_dialog'
 = render 'addresses/upload_form', provider: @provider 
