--- a/app/views/addresses/_new_form.html.haml
+++ b/app/views/addresses/_new_form.html.haml
@@ -1,7 +1,6 @@
-= form_for address, url: provider_common_addresses_path, as: prefix, :method=>:post, html: {:class=>'address-search', 'data-id-element' => "#trip_#{prefix}_address_id", 'data-label-element' => "##{prefix}_search_address"} do |form|
+= form_for address, url: provider_common_addresses_path, as: prefix, :method=>:post, remote: true, html: {:class=>'address-search', 'data-id-element' => "#trip_#{prefix}_address_id", 'data-label-element' => "##{prefix}_search_address"} do |form|
   = hidden_field_tag 'address_id', address.id
-  = hidden_field_tag 'customer_id', address.customer_id
   = hidden_field_tag 'prefix', prefix
   %fieldset
     %ol.section
-      = render 'addresses/geocoding_form_fields', form: form, address: address, prefix: prefix
+      = render 'addresses/provider_common_address_form_fields', form: form, address: address, prefix: prefix
