--- a/app/views/providers/show_old.html.erb
+++ b/app/views/providers/show_old.html.erb
@@ -41,7 +41,7 @@
 
 <%= render 'addresses/upload_form', provider: @provider %>
 
-<%= render 'new_address_dialog' %>
+<%= render 'add_address_dialog' %>
 
 <p><%= link_to translate_helper("create_provider_address_text"), '#', id: 'addProviderCommonAddress', class:'newAddress action-bttn' %></p>
 
