--- a/app/views/customers/_form_header.html.haml
+++ b/app/views/customers/_form_header.html.haml
@@ -11,9 +11,9 @@
         = f.submit translate_helper(:update), class: 'btn action-button'
         = link_to translate_helper(:cancel), customers_path, class: "btn btn-default"
       - else
-        - if @customer.permanent_inactivated?
+        - if @customer.permanent_inactivated? && can?(:reactivate, @customer)
           = link_to translate_helper("reactivate"), reactivate_customer_path(@customer), method: :post, :class=>'btn action-button', :data => { :confirm => translate_helper(:reactivate_confirmation)}
-        - else
+        - elsif can?(:inactivate, @customer)
           = button_tag :type => 'button', id: 'inactivateCustomer', "data-target" => "#inactivateDialog", "data-toggle" => "modal", :class => "btn action-button" do
             = @customer.inactivated? ? translate_helper(:activate) : translate_helper(:inactivate)
         - if !@customer.new_record? && can?(:destroy, @customer)
