Use correct prefix in creating a provider common address; Update specs

--- a/app/views/addresses/_provider_common_address.html.haml
+++ b/app/views/addresses/_provider_common_address.html.haml
@@ -1,4 +1,6 @@
 %tr
+  %td
+    = address.address_group.try(:name)
   %td.name
     = link_to_if can?(:edit, ProviderCommonAddress), address.name || '' , edit_provider_common_address_path(address)
   %td= address.address
