--- a/app/views/providers/_addresses_table.html.haml
+++ b/app/views/providers/_addresses_table.html.haml
@@ -1,6 +1,7 @@
 %table.table.table-bordered#address_results
   %thead
     %tr
+      %th= translate_helper("address_results_type_column")
       %th= translate_helper("address_results_name_column")
       %th= translate_helper("address")
       %th= translate_helper("city")
