--- a/app/views/addresses/_provider_common_address_form_fields.html.haml
+++ b/app/views/addresses/_provider_common_address_form_fields.html.haml
@@ -1,9 +1,5 @@
 - defined?(prefix) ? prefix : prefix = "address"
 - defined?(edit_mode) ? edit_mode : edit_mode = :new
-= form.hidden_field :address, class: 'address_text'
-= form.hidden_field :city, class: 'address_city'
-= form.hidden_field :state, class: 'address_state'
-= form.hidden_field :zip, class: 'address_zip'
 = hidden_field_tag :lat, address.latitude, class: 'address_lat'
 = hidden_field_tag :lon, address.longitude, class: 'address_lon'
 %li.selfclear
@@ -18,6 +14,19 @@
     = address.try(:address_text)
   - else
     = text_field_tag "#{prefix}_full_address", address.try(:address_text), class: 'address_search form-control'
+.selfclear.non_geocoding_address{:style => "display: none;"}
+  %li.selfclear
+    = form.label :address, translate_helper("address")
+    = form.text_field :address, class: 'address_text form-control'
+  %li.selfclear
+    = form.label :city, translate_helper("city")
+    = form.text_field :city , class: 'address_city form-control'
+  %li.selfclear
+    = form.label :state, translate_helper("state")
+    = form.text_field :state, :size=>2, :maxlength=> 2, :class => 'address_state form-control', :data => {:convert => 'uppercase'}
+  %li.selfclear
+    = form.label :zip, translate_helper("zip")
+    = form.text_field :zip, class: 'address_zip form-control'
 %li.selfclear
   = form.label :phone_number, translate_helper("phone_number")
   = form.text_field :phone_number, class: 'form-control'
