Apply max-height to Action Log panel and make it scrollable

--- a/app/assets/stylesheets/v2_theme.scss
+++ b/app/assets/stylesheets/v2_theme.scss
@@ -127,3 +127,13 @@ table.dataTable tbody tr.selected {
 .place-picker-div .twitter-typeahead, .place-picker-div .tt-dropdown-menu {
   width: 100% !important;
 }
+
+.height-constraint-panel {
+  max-height: 300px;
+}
+
+.height-constraint-panel .panel-body {
+  max-height: 250px;
+  overflow-y: auto;
+}
+
