--- a/app/views/shared/_action_log_panel.html.haml
+++ b/app/views/shared/_action_log_panel.html.haml
@@ -1,4 +1,4 @@
-.panel.panel-primary#trip_log_panel
+.panel.panel-primary.height-constraint-panel
   .panel-heading
     %h3.panel-title
       = translate_helper(:action_log)
