--- a/app/views/customers/_eligibility_panel.html.haml
+++ b/app/views/customers/_eligibility_panel.html.haml
@@ -5,21 +5,10 @@
     %h3.panel-title
       = translate_helper(:customer_eligibility_panel)
   .panel-body{style: 'padding: 5px;'}
-    - yes_label = translate_helper('yes')
     - if edit_mode == :show
-      - if @customer.age_eligible?
-        .form-group.col-sm-12
-          .col-sm-7.control-label
-            %b= translate_helper(:age_eligible)
-          .col-sm-5
-            = yes_label
-      - @customer.customer_eligibilities.eligible.includes(:eligibility).references(:eligibility).each do |elig|
-        .form-group.col-sm-12
-          .col-sm-7.control-label
-            %b= elig.eligibility.description
-          .col-sm-5
-            = yes_label
+      = render 'view_customer_eligibilities'
     - else
+      = render 'ada_eligibility', f: f
       - Eligibility.by_provider(current_provider).each do |eligibility|
         = render 'eligibility_item', item: eligibility
 
@@ -30,7 +19,17 @@
       if ($(this).val() == 'false') {
         ineligibleReasonDiv.show();
       } else {
+        ineligibleReasonDiv.find('.ineligible-reason-text').text('');
         ineligibleReasonDiv.hide();
+      }
+    });
+
+    $('#customer_ada_eligible').change(function() {
+      var ada_questions = $(this).parents('.form-group').find('.ada-questions');
+      if ($(this).val() == 'true') {
+        ada_questions.show();
+      } else {
+        ada_questions.hide();
       }
     });
   });
