--- a/app/views/providers/_customers.html.haml
+++ b/app/views/providers/_customers.html.haml
@@ -8,7 +8,16 @@
           = number_field_tag "eligible_age", @provider.eligible_age || Provider::DEFAULT_ELIGIBLE_AGE, { class: 'form-control' }
       .actions
         = submit_tag translate_helper("update")
-%hr/
+- else
+  %p= @provider.eligible_age || Provider::DEFAULT_ELIGIBLE_AGE
+%hr
+
+- ada_question_table = ProviderLookupTable.find_by_name('ada_questions')
+- if ada_question_table
+  %h2.section-header= translate_helper("configure_provider_ada_questions")
+  = link_to translate_helper("provider_ada_questions_link_text"), provider_lookup_table_path(ada_question_table), target: '_blank'
+  %hr
+
 %h2.section-header
   = translate_helper("manage_customers")
   - if Customer.for_provider(@provider.id).empty?
