--- a/app/views/trips/_customer.html.haml
+++ b/app/views/trips/_customer.html.haml
@@ -48,46 +48,6 @@
       $('#' + prefix+ 'trip_funding_source_id').val(customerData.default_funding_source_id);
       $('#' + prefix+ 'trip_service_level').val(customerData.default_service_level);
       $('#' + prefix+ 'trip_medicaid_eligible').attr('checked',customerData.medicaid_eligible);      
-
-      var elig_data = customerData.customer_eligibilities;
-      $('.customer-eligibilities').html('');
-      var hasEligibleItems = false;
-
-      var yes_label = "#{translate_helper('yes')}";
-
-      if(customerData.age_eligible) {
-        hasEligibleItems = true;
-        var age_elig_tags = '<div class="form-group col-sm-12">' +
-          '<label class="col-sm-3">' +
-            "#{translate_helper('age_eligible')}" +
-          '</label>' +
-          '<div class="col-sm-9">' +
-            yes_label +
-          '</div>' +
-        '</div>';
-
-        $('.customer-eligibilities').append(age_elig_tags);
-      }
-
-      for(var i=0; i<elig_data.length; i++) {
-        var elig = elig_data[i];
-        if(elig.eligible) {
-          hasEligibleItems = true;
-          var new_elig_tags = '<div class="form-group col-sm-12">' +
-            '<label class="col-sm-3">' +
-              elig.description +
-            '</label>' +
-            '<div class="col-sm-9">' +
-              yes_label +
-            '</div>' +
-          '</div>';
-          $('.customer-eligibilities').append(new_elig_tags);
-        }
-      }
-
-      if(hasEligibleItems) {
-        $('.customer-eligibilities').prepend("<h4 class='col-sm-12'>#{translate_helper('customer_eligibilities')}</h4>");
-      }
     }
 
     $('.trip_form #customer_name').bind('railsAutocomplete.select', function(event, data){ 
@@ -111,6 +71,8 @@
         }, function(customerData) {
           updateUponCustomerChange(customerData);
         });
+
+      $.get("#{get_eligibilities_for_trip_customer_path('xxx')}".replace('xxx', customerId));
     });
 
     $('#view_customer').click(function(e) {
