--- a/app/views/trips/_eligibility_accommodation_panel.html.haml
+++ b/app/views/trips/_eligibility_accommodation_panel.html.haml
@@ -24,7 +24,7 @@
       .col-sm-9
         %textarea.form-control#mobility_notes{rname:"mobility_notes", readonly:"readonly"}
           = @customer.try :mobility_notes
-    .customer-eligibilities
-      - if @customer
-        %h4.col-sm-12= translate_helper('customer_eligibilities')
+    .customer-eligibilities{style: (@customer ? "" : "display: none;")}
+      %h4.col-sm-12= translate_helper('customer_eligibilities')
+      .customer-eligibility-details
         = render 'customers/view_customer_eligibilities'
