--- a/app/views/customers/_view_customer_eligibilities.html.haml
+++ b/app/views/customers/_view_customer_eligibilities.html.haml
@@ -12,13 +12,15 @@
         %b= translate_helper(:ada_eligible)
       .col-sm-5
         %span.pull-right= yes_label
-    %fieldset.ada-questions.col-sm-10.pull-right
-      - @customer.customer_ada_questions.eligible.includes(:ada_question).references(:ada_question).each do |question|
-        .form-group
-          .col-sm-9.control-label
-            = question.ada_question.name
-          .col-sm-3
-            %span.pull-right= yes_label
+    - eligible_ada_questions = @customer.customer_ada_questions.eligible
+    - eligible_ada_questions.any?
+      %fieldset.ada-questions.col-sm-10.pull-right
+        - eligible_ada_questions.includes(:ada_question).references(:ada_question).each do |question|
+          .form-group
+            .col-sm-9.control-label
+              = question.ada_question.name
+            .col-sm-3
+              %span.pull-right= yes_label
   - @customer.customer_eligibilities.eligible.includes(:eligibility).references(:eligibility).each do |elig|
     .form-group.col-sm-12
       .col-sm-7.control-label
