--- a/app/views/customers/_view_customer_eligibilities.html.haml
+++ b/app/views/customers/_view_customer_eligibilities.html.haml
@@ -13,7 +13,7 @@
       .col-sm-5
         %span.pull-right= yes_label
     - eligible_ada_questions = @customer.customer_ada_questions.eligible
-    - eligible_ada_questions.any?
+    - if eligible_ada_questions.any?
       %fieldset.ada-questions.col-sm-10.pull-right
         - eligible_ada_questions.includes(:ada_question).references(:ada_question).each do |question|
           .form-group
